add new games and new streamers

--- a/index.html
+++ b/index.html
@@ -24,9 +24,22 @@
                     <p>Jogos que eu curto jogar</p>
 
                     <ul class="list-games">
+
+                        <li>
+                            <a href="https://www.twitch.tv/directory/game/Hollow%20Knight" target="_blank">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/490147_IGDB-188x250.jpg" alt="Imagem do jogo Hollow Knight">
+                            </a>
+                        </li>
+
                         <li>
                             <a href="https://www.twitch.tv/directory/game/League%20of%20Legends" target="_blank">
                                 <img src="https://static-cdn.jtvnw.net/ttv-boxart/21779-188x250.jpg" alt="Imagem do jogo League of Legends">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.twitch.tv/directory/game/World%20of%20Warcraft" target="_blank">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/18122-188x250.jpg" alt="Imagem do jogo World Of Warcraft">
                             </a>
                         </li>
 
@@ -42,6 +55,47 @@
                             </a>
                         </li>
 
+                        <li>
+                            <a href="https://www.twitch.tv/directory/game/osu!" target="_blank">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/21465_IGDB-188x250.jpg" alt="Imagem do jogo OSU!">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.twitch.tv/directory/game/Celeste" target="_blank">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/492535_IGDB-188x250.jpg" alt="Imagem do jogo Celeste">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.twitch.tv/directory/game/Stardew%20Valley" target="_blank">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/490744_IGDB-188x250.jpg" alt="Imagem do jogo Stardew Valley">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.twitch.tv/directory/game/The%20Elder%20Scrolls%20IV%3A%20Oblivion" target="_blank">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/18526_IGDB-188x250.jpg" alt="Imagem do jogo The Elder Scrolls IV: Oblivion">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.twitch.tv/directory/game/The%20Elder%20Scrolls%20V%3A%20Skyrim" target="_blank">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/30028_IGDB-188x250.jpg" alt="Imagem do jogo The Elder Scrolls V: Skyrim">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.twitch.tv/directory/game/Dead%20Cells" target="_blank">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/495961_IGDB-188x250.jpg" alt="Imagem do jogo Dead Cells">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.twitch.tv/directory/game/Terraria" target="_blank">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/31376_IGDB-188x250.jpg" alt="Imagem do jogo Terraria">
+                            </a>
+                        </li>
                         
                     </ul>
 
@@ -75,6 +129,18 @@
                         <li>
                             <a href="https://www.twitch.tv/cellbit" target="_blank">
                                 <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/cb885149-f7f7-48f0-99ae-fe0a386ed3e2-profile_image-150x150.png" alt="Imagem do streamer Cellbit">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.twitch.tv/smzinho" target="_blank">
+                                <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/33aba100-11ff-4207-aff3-ef848ddbb7e8-profile_image-150x150.png" alt="Imagem do streamer Smzinho">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.twitch.tv/coreano" target="_blank">
+                                <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/fb16ce63-59c5-4a8f-8ec7-c1f017fe56b3-profile_image-150x150.png" alt="Imagem do streamer Coreano">
                             </a>
                         </li>
                     </ul>
